--- a/Prog3 Practis3.2/Prog3 Practis3.2.csproj
+++ b/Prog3 Practis3.2/Prog3 Practis3.2.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>Prog3_Practis3</RootNamespace>
+    <RootNamespace>DataBinding</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
